k8s/base/services/bill-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bill-service
  namespace: mypoly
spec:
  selector:
    app: bill-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
